JAVA-31430 Some fixes